# pipelines_rj_civitas

./: .flake8  .gitignore  .mergify.yml  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  test.ipynb
.github/ISSUE_TEMPLATE/: notifica--o-de-problema.md  requerimento-de-funcionalidade.md
.github/workflows/: build_docker.yaml  cd.yaml  cd_staging.yaml  code-tree-analysis.yaml  lint.yaml
.github/workflows/scripts/: code_tree_analysis.py  delete_ghost_flows.py  register_flows.py
pipelines/: constants.py  flows.py  utils.py
pipelines/alertas_discord/: __init__.py
pipelines/alertas_discord/data_relay/: flows.py  schedules.py  tasks.py
pipelines/alertas_discord/fogo_cruzado/: config.py  flows.py  tasks.py
pipelines/brics_aigent/: __init__.py
pipelines/brics_aigent/alertas_reports_llm/: flows.py  flows_copy.py  schedules.py  tasks.py  utils.py
pipelines/cerco_digital/: __init__.py
pipelines/cerco_digital/auxiliary_tables/: flows.py  schedules.py
pipelines/cerco_digital/cameras/: flows.py  schedules.py  tasks.py
pipelines/cerco_digital/extract_load/: flows.py  schedules.py
pipelines/cerco_digital/readings/: flows.py  schedules.py
pipelines/cerco_digital_staging/: __init__.py
pipelines/cerco_digital_staging/radar/: flows.py  schedules.py  tasks.py
pipelines/dev/: __init__.py
pipelines/dev/dev/: flows.py  tasks.py  utils.py
pipelines/disque_denuncia/: __init__.py
pipelines/disque_denuncia/alertas/: flows.py  schedules.py  tasks.py
pipelines/disque_denuncia/dump_historico/: flows.py
pipelines/disque_denuncia/extract/: flows.py  schedules.py  tasks.py
pipelines/disque_denuncia/materialize/: flows.py  schedules.py
pipelines/exemplo/: __init__.py
pipelines/exemplo/nome_do_objetivo/: flows.py  tasks.py
pipelines/fogo_cruzado/: __init__.py
pipelines/fogo_cruzado/extract_load/: flows.py  schedules.py  tasks.py  utils.py
pipelines/g20/: __init__.py
pipelines/g20/alertas_reports_llm/: flows.py  model.py  schedules.py  tasks.py  utils.py
pipelines/g20/dbt_run_relatorio_enriquecido/: flows.py  model.py  schedules.py  tasks.py  utils.py
pipelines/integracao_reports/: __init__.py
pipelines/integracao_reports/materialize/: flows.py  schedules.py
pipelines/integracao_reports/materialize_reports/: flows.py
pipelines/integracao_reports_staging/: __init__.py
pipelines/integracao_reports_staging/materialize_1746/: flows.py  schedules.py
pipelines/integracao_reports_staging/materialize_disque_denuncia/: flows.py  schedules.py
pipelines/integracao_reports_staging/materialize_fogo_cruzado/: flows.py
pipelines/integracao_reports_staging/materialize_telegram/: flows.py
pipelines/integracao_reports_staging/materialize_twitter/: flows.py
pipelines/models/: redis_hash.py
pipelines/pipeline_test/: __init__.py
pipelines/pipeline_test/dev/: flows.py  tasks.py  utils.py
pipelines/pipeline_test/graphql_status/: flows.py  tasks.py
pipelines/placas_clonadas/: __init__.py
pipelines/placas_clonadas/materialize/: flows.py  schedules.py
pipelines/radar_readings/: __init__.py
pipelines/radar_readings/materialize/: flows.py  schedules.py
pipelines/radares_infra/: __init__.py
pipelines/radares_infra/materialize/: flows.py  schedules.py
pipelines/reports_disque_denuncia/: __init__.py
pipelines/reports_disque_denuncia/extract/: flows.py  schedules.py  tasks.py
pipelines/scraping_redes/: __init__.py
pipelines/scraping_redes/models/: model.py  palver.py
pipelines/scraping_redes/telegram/: flows.py  schedules.py  tasks.py  (+1 more)
pipelines/templates/: __init__.py
pipelines/test/: __init__.py
pipelines/update_sheets/: __init__.py
pipelines/utils/: cache.py  credential_injector.py  dbt.py  environment_vars.py  maps.py  notifications.py  state_handlers.py  tasks.py
queries/: .gitignore  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
queries/macros/: materialization_override.sql
queries/models/: schema.yml
queries/tests/: map_ponto_coleta__no_id_gaps.sql
(+108 files in other folders)
