[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dbt-bigquery = "^1.6.1"
google-cloud-storage = "^2.10.0"
prefect = "1.4.1"
prefeitura-rio = { git = "https://github.com/prefeitura-rio/prefeitura-rio", rev = "3da07f5f183562cd6bd54c724f6071fac050f1fe", extras = [
    "pipelines",
    "pipelines-templates",
    "actions"
] }
xmltodict = "^0.13.0"
pillow = "^10.4.0"
folium = "^0.17.0"
discord = "^2.3.2"
selenium = ">=4.21.0"
webdriver-manager = ">=4.0.1"
google-cloud-resource-manager = "^1.13.0"
vertexai = "^1.71.1"
googlemaps = "^4.10.0"
tenacity = "^9.0.0"
marshmallow = "3.20.2"
infisical = {git = "https://github.com/gabriel-milan/infisical-python"}
dspy = "^2.6.27"
litellm = "^1.73.6"
pyfarmhash = "^0.4.0"
aiohappyeyeballs = ">=2.4.0,<2.4.2 || >2.4.2,<2.5.0"
elementary-data = {extras = ["bigquery"], version = "^0.19.4"}
gitpython = "^3.1.45"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"
taskipy = "^1.12.0"
isort = "^5.12.0"


[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
loguru = "^0.7.0"
typer = "^0.9.0"
networkx = ">=2.3,<4.0"

[tool.black]
line-length = 100
target-version = ["py310"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = "black . && isort . && flake8 ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
